<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_program_info"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorGraySuperLight"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_back"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:background="@color/colorGraySuperLight"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/back"
                android:textColor="@color/colorBlueLight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="О программе"
                android:textColor="@color/colorText"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_program_info">

        <ImageView
            android:id="@+id/logo"
            android:layout_marginTop="60dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:fontFamily="@font/light"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_name"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:textSize="17sp"
            android:text="@string/app_version"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="@font/light"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_version"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:textSize="17sp"
            android:gravity="center"
            android:text="В приложении используются ресурсы с сайта teenslang.su"
            android:layout_centerHorizontal="true"
            />


    </RelativeLayout>



</RelativeLayout>