<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundDark">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_information"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorGraySuperLight"
        android:elevation="@dimen/toolbarElevation"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Информация"
                android:textColor="@color/colorText"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_information"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/tvbtn_about_program"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:text="@string/about_program"
                android:textColor="@color/colorText"
                android:textSize="@dimen/textSize" />
            <ImageButton
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/arrow"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentTop="true"
                android:background="@color/colorGrayLight" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="30dp"
                android:background="@color/colorGrayLight" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/tvbtn_about_developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:text="@string/about_developer"
                android:textColor="@color/colorText"
                android:textSize="@dimen/textSize" />
            <ImageButton
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/arrow"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="30dp"
                android:background="@color/colorGrayLight" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/tvbtn_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:text="@string/make_review"
                android:textColor="@color/colorText"
                android:textSize="@dimen/textSize" />
            <ImageButton
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/arrow"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/lineWidth"
                android:layout_alignParentBottom="true"
                android:background="@color/colorGrayLight" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>