<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_new_phrase"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorGraySuperLight"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        android:elevation="@dimen/toolbarElevation"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_new_cancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:background="@color/colorGraySuperLight"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/cancel"
                android:textSize="14sp"
                android:textColor="@color/colorBlueLight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/new_phrase"
                android:textColor="@color/colorText"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_new_done"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@color/colorGraySuperLight"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/done"
                android:textSize="14sp"
                android:textColor="@color/colorBlueLight" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_new_phrase">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

    <RelativeLayout
        android:id="@+id/rl_new_phrase_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/tv_label_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Основное"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_phrase_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_label_main"
            android:hint="Введите слово" />

        <EditText
            android:id="@+id/et_phrase_definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_phrase_name"
            android:hint="Введите значение" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_new_phrase_main"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/tv_label_additional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Дополнительно"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_phrase_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_label_additional"
            android:hint="Введите тип, например, сущ. с.р" />

        <EditText
            android:id="@+id/et_phrase_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_phrase_type"
            android:hint="Введите группу, например, АНИМЕ" />

        <EditText
            android:id="@+id/et_phrase_examples"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_phrase_group"
            android:hint="Введите примеры использования" />

        <EditText
            android:id="@+id/et_phrase_hashtags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_phrase_examples"
            android:hint="Введите хештеги" />

        <EditText
            android:id="@+id/et_phrase_origin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_phrase_hashtags"
            android:hint="Введите происхождение" />

        <EditText
            android:id="@+id/et_phrase_synonyms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_phrase_origin"
            android:hint="Введите синонимы" />


    </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>